# israwave

./: .gitignore  BUILDING.md  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
dataset/LJSpeech-1.1/: metadata.csv
examples/: play.py  play_segments.py  save.py  save_segments.py  usage.py
israwave/: README.md  __init__.py  config.json  helpers.py  logging.py  model.py  pyproject.toml  segment.py  symbols.py  tensors.py  tokenizer.py
israwave/src/israwave/: logging.py  model.py  symbols.py  tokenizer.py
lab/: README.md  export.ipynb  prepare.ipynb  train.ipynb
src/israwave/: __init__.py  __main__.py  tokenizer.py  values.py
ui/: app.py  main.py  requirements.txt
