[project]
name = "israwave"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
dependencies = [
    "onnxruntime>=1.19.2",
    "numpy>=2.1.1",
    "soundfile>=0.12.1",
    "nakdimon-ort>=0.1.5",
    "piper-phonemize-cross>=1.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/israwave"]
