[project]
name = "israwave"
version = "0.1.8"
description = "Hebrew text to speech on the edge"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "onnxruntime>=1.19.2",
    "numpy>=2.1.1",
    "soundfile>=0.12.1",
    "sounddevice>=0.5.0",
    "nakdimon-ort>=0.1.5",
    "espeakng-loader==0.1.2",
    "phonemizer-fork==3.3.1", # TODO: remove once https://github.com/thewh1teagle/espeakng-loader/issues/2 merged and change dependency from git to stable!
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
